--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -1,4 +1,8 @@
-.header  {
+z.header  {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
   font-family: monospace;
   background: papayawhip;
 }
@@ -9,11 +13,18 @@
   color: tomato;
   background: white;
   padding: 4px 32px;
+  margin: 4px;
 }
 
+
 ul {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
   /* this removes the dots on the list items*/
   list-style-type: none;
+  margin: 4px;
+  padding-inline-start: 0;
 }
 
 a {
@@ -22,4 +33,5 @@ a {
   padding: 8px;
   /* this removes the line under the links */
   text-decoration: none;
+  margin: 4px;
 }
