--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -8,8 +8,25 @@ img {
 }
 
 .title {
+  display: flex;
+  justify-content: center;
   font-size: 36px;
   font-weight: 900;
+  margin-bottom: 32;
+}
+
+.row {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  gap: 52px;
+}
+
+.item {
+  width: 200px;
+  text-align: center;
+  word-wrap: normal;
 }
 
 /* do not edit this footer */
