--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -13,6 +13,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-direction: row;
 }
 
 .modal {
@@ -20,8 +21,26 @@ body {
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  padding: 20px;
+  display: flex;
+  flex-direction: row;
+  gap: 8px
 }
 
+.tops {
+  display: flex;
+  flex-shrink: 42px;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 8px;
+  width: fit-content;
+}
+
+.row {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
 .icon {
   color: royalblue;
   font-size: 26px;
@@ -33,6 +52,9 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+}
+.header {
+  font-weight: bold;
 }
 
 .close-button {
@@ -51,6 +73,7 @@ body {
 button {
   padding: 8px 16px;
   border-radius: 8px;
+  
 }
 
 button.continue {
