Add styling with grid to css

--- a/grid/01-grid-layout-1/style.css
+++ b/grid/01-grid-layout-1/style.css
@@ -8,6 +8,10 @@ body, html {
   height: 100%;
   padding: 16px;
   box-sizing: border-box;
+  display: grid;
+  grid-template-columns: 25vw 75vw;
+  grid-template-rows: 16vh 16vh 48vh 16vh;
+  gap: 15px;
 }
 
 .container div {
@@ -21,18 +25,24 @@ body, html {
 
 .header {
   background-color: #FFDE22;
+  
+  grid-area: 1 / 1 / 1 / 3;
 }
 
 .sidebar {
   background-color: #FF7755;
+  /* grid-area: row-start / column-start / row-end / column-end;*/
+  grid-area: 2 / 1 / 4 / 2;
 }
 
 .nav {
   background-color: #00DDFF;
+  grid-area: 2 / 2 / 3 / 3;
 }
 
 .article {
   background-color: #bccbde;
+  overflow: scroll;
 }
 
 .article p {
@@ -44,4 +54,5 @@ body, html {
 
 .footer {
   background-color: #393f4d;
+  grid-column: 1 / 3;
 }
